Added migrations for db

--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -3,4 +3,4 @@ log_level = "DEBUG"
 
 
 [store]
-database_url = "host=localhost dbname=aniquiz_dev sslmode=disable"
+database_url = "host=localhost dbname=aniquiz_dev sslmode=disable user=postgres password="
